--- a/prac.ipynb
+++ b/prac.ipynb
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9 25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "H, M = map(int,input().split())\n",
     "if (H > 0) & (M < 45):\n",
@@ -49,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "H, M = map(int,input().split())\n",
     "C = int(input())\n",
@@ -88,17 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dice = list(map(int,input().split()))\n",
     "dice.sort()\n",
@@ -128,17 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 87\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = int(input())\n",
     "num_ls = list(map(int,input().split()))\n",
@@ -155,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 1 4 2 5 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N ,M = map(int,input().split())\n",
     "num_ls = list(range(1,N+1))\n",
@@ -183,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,43 +153,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'b', '31', '4']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'a b 31 4'.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 3,4\n",
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "김시습님 환영합니다!\n",
+      "허균님 환영합니다!\n",
+      "남영로님 환영합니다!\n",
+      "임제님 환영합니다!\n",
+      "박지원님 환영합니다!\n",
+      "[{'name': '김시습', 'age': 20, 'address': '서울'}, {'name': '허균', 'age': 16, 'address': '강릉'}, {'name': '남영로', 'age': 52, 'address': '조선'}, {'name': '임제', 'age': 36, 'address': '나주'}, {'name': '박지원', 'age': 60, 'address': '한성부'}]\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_of_people = 0\n",
+    "\n",
+    "\n",
+    "def increase_user(name):\n",
+    "    global number_of_people\n",
+    "    number_of_people += len(name)\n",
+    "    #print(f'{name}님 환영합니다!')\n",
+    "\n",
+    "\n",
+    "def create_user():\n",
+    "    global user_info\n",
+    "    increase_user(name)\n",
+    "    user_info = list(map(lambda n, a, ad: {'name': n, 'age': a, 'address': ad}, name, age, address))\n",
+    "    for info in user_info:\n",
+    "        print(f'{info[\"name\"]}님 환영합니다!')\n",
+    "    print(user_info)\n",
+    "\n",
+    "user_info = []\n",
+    "\n",
+    "name = ['김시습', '허균', '남영로', '임제', '박지원']\n",
+    "age = [20, 16, 52, 36, 60]\n",
+    "address = ['서울', '강릉', '조선', '나주', '한성부']\n",
+    "\n",
+    "create_user()\n",
+    "print(number_of_people)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "김시습님 환영합니다!\n",
+      "허균님 환영합니다!\n",
+      "남영로님 환영합니다!\n",
+      "임제님 환영합니다!\n",
+      "박지원님 환영합니다!\n",
+      "남은 책의 수: 98\n",
+      "김시습님이 2권의 책을 대여하였습니다.\n",
+      "남은 책의 수: 97\n",
+      "허균님이 1권의 책을 대여하였습니다.\n",
+      "남은 책의 수: 92\n",
+      "남영로님이 5권의 책을 대여하였습니다.\n",
+      "남은 책의 수: 89\n",
+      "임제님이 3권의 책을 대여하였습니다.\n",
+      "남은 책의 수: 83\n",
+      "박지원님이 6권의 책을 대여하였습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_of_people = 0\n",
+    "number_of_book = 100\n",
+    "\n",
+    "def increase_user(name):\n",
+    "    global number_of_people\n",
+    "    number_of_people += len(name)\n",
+    "\n",
+    "def decrease_book(num_book):\n",
+    "    global number_of_book\n",
+    "    number_of_book -= num_book\n",
+    "    print(f'남은 책의 수: {number_of_book}')\n",
+    "\n",
+    "name = ['김시습', '허균', '남영로', '임제', '박지원']\n",
+    "age = [20, 16, 52, 36, 60]\n",
+    "address = ['서울', '강릉', '조선', '나주', '한성부']\n",
+    "\n",
+    "def create_user():\n",
+    "    global user_info\n",
+    "    increase_user(name)\n",
+    "    user_info = list(map(lambda n, a, ad: {'name': n, 'age': a, 'address': ad}, name, age, address))\n",
+    "    for info in user_info:\n",
+    "        print(f'{info[\"name\"]}님 환영합니다!')\n",
+    "\n",
+    "user_info = []\n",
+    "\n",
+    "def rental_book(info):\n",
+    "    num_books = info['age'] // 10\n",
+    "    decrease_book(num_books)\n",
+    "    print(f\"{info['name']}님이 {num_books}권의 책을 대여하였습니다.\")\n",
+    "\n",
+    "create_user()\n",
+    "\n",
+    "for user in user_info:\n",
+    "    rental_book(user)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tuple"
+       "['김시습님 환영합니다!', '허균님 환영합니다!', '남영로님 환영합니다!', '임제님 환영합니다!', '박지원님 환영합니다!']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = 3,4\n",
-    "type(a)"
+    "welcome_messages"
    ]
   }
  ],
