--- a/prac.ipynb
+++ b/prac.ipynb
@@ -300,6 +300,69 @@
    "source": [
     "welcome_messages"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 4, 4], [6, 6, 6], [5, 6, 100]]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2738\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "m_1 = []\n",
+    "m_2 = []\n",
+    "\n",
+    "for i in range(N):\n",
+    "    m_1.append(list(map(int,input().split())))\n",
+    "\n",
+    "for j in range(N):\n",
+    "    m_2.append(list(map(int,input().split())))\n",
+    "\n",
+    "m_3 = []\n",
+    "for i in range(N):\n",
+    "    ls = []\n",
+    "    for j in range(M):\n",
+    "        ls.append(m_1[i][j] + m_2[i][j])\n",
+    "    m_3.append(ls)\n",
+    "\n",
+    "for i in m_3:\n",
+    "    print(*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_ls = list()\n",
+    "for i in range(9):\n",
+    "    num_ls.append(list(map(int,input().split())))\n",
+    "max_num = 0\n",
+    "max_i = 0\n",
+    "max_j = 0\n",
+    "\n",
+    "for i in range(9):\n",
+    "    for j in range(9):\n",
+    "        if max_num < num_ls[i][j]:\n",
+    "            max_num = num_ls[i][j]\n",
+    "            max_i = i+1\n",
+    "            max_j = j+1\n",
+    "print(max_num)\n",
+    "print(max_i, max_j)"
+   ]
   }
  ],
  "metadata": {
@@ -318,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
